# cogentic

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: sample.py
src/cogentic/llm/: __init__.py  api.py  entra.py
src/cogentic/observability/: __init__.py  client.py
src/cogentic/orchestration/: chat.py  model_output.py  models.py  orchestrator.py
src/cogentic/orchestration/prompts/: __init__.py  create_progress_ledger.md  final_answer.md  hypothesis.md  initial_fact_sheet.md  next_speaker.md  progress_ledger.md  prompts.py  update_plan_on_completion.md  update_plan_on_stall.md
src/cogentic/planning/: planner.py
src/cogentic/tests/: test_failures.py  test_grass.py  test_simple_math.py
src/rigorous/llm/: __init__.py  entra.py  llm.py
src/rigorous/observability/: __init__.py  client.py
src/rigorous/orchestration/: __init__.py  chat.py  model_output.py  orchestrator.py  state.py
src/rigorous/orchestration/prompts/: __init__.py  final_answer.md  initial_question.md  prompts.py
src/rigorous/planning/: planner.py
src/rigorous/tests/: test_failures.py  test_grass.py  test_simple_math.py
tests/: common.py  test_failures.py  test_grass.py  test_simple_math.py
